[tool.poetry]
name = "trustable_library"
version = "0.1.0"
description = "An example library in Python. Maybe you want to trust it, maybe you don't?"
authors = ["A.J. Stein <alexander.stein@nist.gov>"]
license = "CC0-1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
